test/regress/regress-14.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func (result(i32)
    (return (i32.const 42))))

(;; STDERR ;;;
out/test/regress/regress-14.txt:4:16: error: unexpected token (, expected ).
  (func (result(i32)
               ^
;;; STDERR ;;)
